--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND_URL=http://localhost:8080
-REACT_APP_VERSION=1.0.0-dev
-PORT=3001
+REACT_APP_BACKEND_URL=http://localhost:9000/api/passport
+REACT_APP_VERSION=1.0.0-Develop
+PORT=3002
