--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
-REACT_APP_BACKEND_URL=http://localhost:9030/api/passport
+REACT_APP_GATEWAY_URL=http://localhost:9000
+REACT_APP_PASSPORT_PREFIX=/passport
 REACT_APP_LOGIN_URL=http://localhost:9020
 REACT_APP_VERSION=1.0.0-Develop
 PORT=9030
