add form for logout id.frontend with redirect

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 REACT_APP_GATEWAY_URL=http://localhost:9000
 REACT_APP_PASSPORT_PREFIX=/passport
 REACT_APP_BUILD_HASH=1.0.0-Develop
+REACT_APP_POST_LOGOUT_REDIRECT_URL=http://localhost:8080
 
 PORT=9030
